# greg_personal_tools

./: .gitignore  README.md  podcast_transcripts.py  pyproject.toml  requirements.txt  test_podcast_transcripts.py
.claude-plugin/: marketplace.json
babysit-pr/: README.md  SKILL.md
greg-tools/: .gitignore
greg-tools/.claude-plugin/: plugin.json
greg-tools/skills/biz-diagram/: SKILL.md
greg-tools/skills/excalidraw-diagram/: SKILL.md
greg-tools/skills/excalidraw-diagram/references/: render_excalidraw.py  render_template.html
greg-tools/skills/pending/: SKILL.md
greg-tools/skills/sheet-download/: SKILL.md
greg-tools/skills/sync-docs/: SKILL.md
